fixed issue with pattern menu alignment

--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -6,10 +6,6 @@
   .Flex;
 }
 
-#patternEditor {
-  width: 70px;
-}
-
 #patternTrackList {
   width: 51%;
 }
@@ -23,15 +19,6 @@
 
 @media screen and ( max-width: @tablet-portrait-width )
 {
-  #patternEditor {
-    width: 50px;
-    .controls li {
-      margin: .25em 0 .3em .25em;
-    }
-    .indices {
-      display: none;
-    }
-  }
   #helpSection {
     display: none;
     width: 0;
